Removed build folder and fixed navbar hovering

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description"
+    content="Our mission is to finish our enemies (clan MVP) 'mission given, mission accomplished'" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>The Ninja Board</title>
 </head>
